Avoid anonymous class in AudienceContext conversion